# surgeofficial-surge-coin

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
.travis/: test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
contrib/: gitian-build.py  install_db4.sh  surge-cli.bash-completion  surge-qt.pro  surge-tx.bash-completion  surged.bash-completion  valgrind.supp
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-memory.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
params/: install-params.sh  sapling-output.params
share/: setup.nsi  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  addressbook.h  addrman.h  amount.h  base58.cpp  blob_uint256.h  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.h  compat.h  cyclingvector.h  hash.h  httpserver.h  init.cpp  init.h  invalid.h  invalid_outpoints.json.h  invalid_serials.json.h  (+51 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  rpcexecutor.h  surge.cpp  surge.qrc  surge_locale.qrc  surgestrings.cpp  transactionfilterproxy.cpp  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  utilitydialog.cpp  walletmodel.cpp  walletmodel.h
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  rpcconsole.ui
src/qt/locale/: surge_de.ts  surge_en.ts  surge_en_US.ts  surge_es.ts  surge_es_ES.ts  surge_fr_FR.ts  surge_hr_HR.ts  surge_it.ts  surge_ko_KR.ts  surge_nl.ts  surge_pl.ts  surge_ru.ts  surge_tr.ts  surge_zh_CN.ts
src/qt/res/: surge-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/surge/: addnewaddressdialog.cpp  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  csrow.cpp  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  focuseddialog.cpp  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  governancemodel.cpp  governancemodel.h  governancewidget.cpp  governancewidget.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  masternodeswidget.cpp  masternodeswidget.h  (+55 more)
src/qt/surge/forms/: addresseswidget.ui  balancebubble.ui  coldstakingwidget.ui  createproposaldialog.ui  csrow.ui  dashboardwidget.ui  governancewidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  txrow.ui  ui_addresseswidget.h  ui_balancebubble.h  ui_coldstakingwidget.h  ui_csrow.h  ui_dashboardwidget.h  ui_masternodeswidget.h  ui_masternodewizarddialog.h  ui_receivewidget.h  ui_requestdialog.h  ui_send.h  ui_sendchangeaddressdialog.h  ui_sendconfirmdialog.h  ui_sendcustomfeedialog.h  ui_sendmemodialog.h  ui_sendmultirow.h  ui_topbar.h  ui_txrow.h  ui_welcomecontentwidget.h  votedialog.ui  welcomecontentwidget.ui
src/qt/surge/res/css/: style_dark.css  style_light.css
src/qt/surge/settings/: moc_settingsbackupwallet.cpp  moc_settingsbittoolwidget.cpp  moc_settingsconsolewidget.cpp  moc_settingsdisplayoptionswidget.cpp  moc_settingsexportcsv.cpp  moc_settingsfaqwidget.cpp  moc_settingsinformationwidget.cpp  moc_settingsmainoptionswidget.cpp  moc_settingsmultisenddialog.cpp  moc_settingsmultisendwidget.cpp  moc_settingssignmessagewidgets.cpp  moc_settingswalletoptionswidget.cpp  moc_settingswalletrepairwidget.cpp  moc_settingswidget.cpp  settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  (+3 more)
src/qt/surge/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui  ui_settingsbittoolwidget.h  ui_settingsdisplayoptionswidget.h  ui_settingsfaqwidget.h  ui_settingsmainoptionswidget.h  ui_settingssignmessagewidgets.h  ui_settingswidget.h
src/qt/test/: test_main.cpp  uritests.cpp
(+439 files in other folders)
